--- a/Pipfile
+++ b/Pipfile
@@ -13,9 +13,8 @@ python_version = "3.6"
 [packages]
 
 dj-database-url = "==0.4.2"
-django = "==2.0"
+Django = "==2.0"
 gunicorn = "==19.7.1"
-"psycopg2" = "==2.7.3.2"
 whitenoise = "==3.3.1"
 
 
